# goi3bar

./: .gitignore  BUILD.bazel  COPYRIGHT  Gopkg.toml  LICENSE  README.md  WORKSPACE  component.go  doc.go  go.mod  go.sum  i3bar.go  item.go  multigenerator.go  multiproducer.go
cmd/goi3bar/: BUILD.bazel  config.json  goi3bar.go
config/: BUILD.bazel  config.go  doc.go  json.go
scripts/: clock.go  clockbat  clockbat.go  clockbatmem.go  clockbatmemcpu.go
scripts/clock/: clock.go
scripts/clockbat/: clockbat.go
scripts/clockbatmem/: clockbatmem.go
scripts/clockbatmemcpu/: clockbatmemcpu.go
scripts/clockbatmemcpunet/: clockbatmemcpunet.go
scripts/clockbatmemcpunetdisk/: clockbatmemcpunetdisk.go
scripts/clockmemcpunetdiskdisk/: clockmemcpunetdiskdisk.go
util/: BUILD.bazel  bytefmt.go  errors.go  json.go  ticker.go
